<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvTrolleyno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trolley_no"/>

    <TextView
        android:id="@+id/tvRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/route"/>

    <TextView
        android:id="@+id/tvTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_start"/>

    <TextView
        android:id="@+id/tvTimeStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_stop"/>

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval"/>


    <ImageButton
        android:id="@+id/btnReverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/reverse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvStops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/stops"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvMinutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:gravity="right"
            android:text="@string/mins"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
    </LinearLayout>


    <ListView
        android:id="@+id/lvStops"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>